<resources>
    <string name="app_name">KUBDb</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rating">Rating:</string>
    <string name="availability">Availability:</string>
    <string name="home">Home</string>
    <string name="books">Books</string>
    <string name="my_profile">My Profile</string>
    <string name="isbn">ISBN:</string>
    <string name="publication_year">Publication Year</string>
    <string name="my_books">My Books</string>
    <string name="authors">Authors:</string>
    <string name="publisher">Publisher</string>
    <string name="book_details">Book Details</string>
    <string name="category_3">Category 3</string>
    <string name="books_of_best_author">Books of Best Author</string>
    <string name="books_for_you">Books for you</string>
    <string name="log_out">Log out</string>
    <string name="all_books">All Books</string>
    <string name="unavailable">Unavailable</string>
    <string name="available">Available</string>
    <string name="show">show:</string>
    <string name="all">All</string>
    <string name="similar_books">Similar Books</string>
    <string name="borrow_book">Borrow This Book</string>
    <string name="unavailable_book">Currently Unavailable</string>
    <string name="return_book">Return This Book</string>
    <string name="books_from_experts">Books From Experts</string>
</resources>