<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.BookDetailsFragment">

    <data>

        <variable
            name="fragment"
            type="com.comp306.kubdb.fragments.BookDetailsFragment" />

        <variable
            name="book"
            type="com.comp306.kubdb.data.entities.Book" />

        <variable
            name="rating"
            type="Float" />

        <variable
            name="publishers"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/books_details_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetStart="0dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/tg_btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@null"
                    android:onClick="@{fragment::onBackClicked}"
                    android:padding="8dp"
                    android:paddingVertical="5dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="8dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_baseline_arrow_back_ios_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:lineSpacingExtra="5sp"
                    android:text="@string/book_details"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tg_btn_back"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/books_details_toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/book_details_img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_launcher_background"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/book_details_title_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textAlignment="center"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/book_details_img"
                    android:paddingHorizontal="12dp"
                    tools:text="Title of the book" />

                <TextView
                    android:id="@+id/authors_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/authors"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/book_details_title_tv" />

                <TextView
                    android:id="@+id/authors_value_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:text="@{publishers}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/authors_tv"
                    app:layout_constraintTop_toTopOf="@+id/authors_tv"
                    tools:text="Sarieh, Walid, 3rbin, HMD, Hamada, Serdar, Sarieh, Walid, 3rbin, HMD, Hamada, Serdar, Sarieh, Walid, 3rbin, HMD, Hamada, Serdar, Sarieh, Walid, 3rbin, HMD, Hamada, Serdar" />


                <TextView
                    android:id="@+id/rating_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/rating"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/authors_value_tv" />

                <RatingBar
                    android:id="@+id/book_details_rating"
                    style="@style/Base.Widget.AppCompat.RatingBar.Small"
                    android:theme="@style/RatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:stepSize="0.5"
                    android:rating="@{rating}"
                    app:layout_constraintBottom_toBottomOf="@+id/rating_tv"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/rating_tv"
                    app:layout_constraintTop_toTopOf="@+id/rating_tv"
                    tools:rating="0" />

                <TextView
                    android:id="@+id/publication_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/publication_year"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/rating_tv"
                    app:layout_constraintTop_toBottomOf="@id/rating_tv" />

                <TextView
                    android:id="@+id/publication_value_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    app:layout_constraintBottom_toBottomOf="@+id/publication_tv"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/publication_tv"
                    app:layout_constraintTop_toTopOf="@+id/publication_tv"
                    tools:text="1999" />

                <TextView
                    android:id="@+id/publisher_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/publisher"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/publication_tv"
                    app:layout_constraintTop_toBottomOf="@id/publication_value_tv" />

                <TextView
                    android:id="@+id/publisher_value_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    app:layout_constraintBottom_toBottomOf="@+id/publisher_tv"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/publisher_tv"
                    app:layout_constraintTop_toTopOf="@+id/publisher_tv"
                    tools:text="Sarieh Serdar" />

                <TextView
                    android:id="@+id/availability_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/availability"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/publisher_tv"
                    app:layout_constraintTop_toBottomOf="@id/publisher_value_tv" />

                <TextView
                    android:id="@+id/availability_value_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    app:layout_constraintBottom_toBottomOf="@+id/availability_tv"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/availability_tv"
                    app:layout_constraintTop_toTopOf="@+id/availability_tv"
                    tools:text="Sarieh Serdar" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>